kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webui
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/name: "Flux Web UI"
spec:
  hostnames: ["flux.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
